--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--max-old-space-size=4096' webpack",
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' webpack",
     "start": "live-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.22.15",
-    "@babel/core": "^7.22.15",
-    "@babel/preset-env": "^7.22.15",
-    "@babel/preset-react": "^7.22.15",
-    "@types/nodemailer": "^6.4.14",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "style-loader": "^3.3.4",
@@ -30,6 +25,7 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "dropzone": "^6.0.0-beta.2",
     "live-server": "^1.2.2",
     "mapbox-gl": "^3.2.0",
