--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--max-old-space-size=4096' webpack",
     "build": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' webpack",
-    "start": "live-server"
+    "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' live-server --port=8080"
   },
   "keywords": [],
   "author": "",
