--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development NODE_OPTIONS='--max-old-space-size=4096' webpack",
-    "build": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' webpack",
-    "start": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=4096' live-server --port=8080"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "live-server"
   },
   "keywords": [],
   "author": "",
